# ransomware

./: README.md  common.py  config.py  decrypt.py  encrypt.py  main.py  pyproject.toml  schema.sql  web.py
